# instaBackingApp

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  bootstrap.sh  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
docs/: ARCHITECTURE.md  REQUIREMENTS.md
docs/arc42/: ARC42.md
src/instaBackingApp/: __main__.py  config.py
src/instaBackingApp/models/: post.py  rate_limit.py  session.py  story.py  target_account.py
src/instaBackingApp/repositories/: post_repository.py
src/instaBackingApp/services/: instagram_client.py  post_service.py  story_service.py
src/insta_backing_app/: __init__.py  logging_config.py
src/insta_backing_app/models/: __init__.py  base.py  post.py  rate_limit.py  session.py  story.py  target_account.py
src/insta_backing_app/repositories/: __init__.py  post_repository.py  rate_limit_repository.py  session_repository.py  story_repository.py  target_account_repository.py
src/insta_backing_app/services/: __init__.py  account_manager.py  instagram_client.py  orchestrator.py  post_service.py  rate_limiter.py  story_service.py
tests/: test_config.py
