[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insta-backing-app"
version = "1.0.0"
description = "Automatisierter Instagram-Backing-Service zum Liken von Stories und Beiträgen"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Mario" }]
keywords = ["instagram", "automation", "docker", "12-factor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "instagrapi>=2.1.2",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "apscheduler>=3.10.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
postgres = [
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
insta-backing-app = "insta_backing_app.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/insta_backing_app"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
